--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Unica+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +15,7 @@
 <body>
 
     <div class="top">
-        <header>
+        <header id= "Generic">
             Generic Watches Site
         </header>
         <h3>
@@ -25,9 +28,8 @@
     </div>
 
     <div class="all_watches_container">
-
         <article class="watch_container">
-            <img src="assets/classicWatch.png" alt="Classic Watch">
+            <img class="watch" src="assets/classicWatch.png" alt="Classic Watch">
             <div class="text">
 
                 <h2>
@@ -57,7 +59,7 @@
             </div>
         </article>
         <article class="watch_container">
-            <img src="assets/mechanicalWatch.png" alt="Mechanical Watch">
+            <img class="watch_mech" src="assets/mechanicalWatch.png" alt="Mechanical Watch">
 
             <div class="text">
 
@@ -79,16 +81,17 @@
                     reasons, for appreciation of their fine craftsmanship, or as a status symbol.
                 </p>
             </div>
+        
 
 
         </article>
 
         <article class="watch_container">
-            <img src="assets/pocketWatch.png" alt="Pocket Watch">
+            <img class="watch_pocket" src="assets/pocketWatch.png" alt="Pocket Watch">
             <!-- secret #2 = E -->
             <div class="text">
 
-                <h2>
+                <h2 class="classic_watches">
                     Pocket Watch
                 </h2>
                 <!-- Taken from https://en.wikipedia.org/wiki/Pocket_watch -->
